--- a/EditableListView_Demo/App.xaml
+++ b/EditableListView_Demo/App.xaml
@@ -2,6 +2,5 @@
   x:Class="EditableListView_Demo.App"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  StartupUri="MainWindow.xaml">
-  <Application.Resources />
-</Application>
+  StartupUri="MainWindow.xaml" />
+<!--  StartupUri="Window1.xaml" />  -->
