--- a/EditableListView_Demo/Window1.xaml
+++ b/EditableListView_Demo/Window1.xaml
@@ -74,50 +74,100 @@
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
-    <ListView
-      Grid.Row="2"
-      Margin="10"
-      ItemsSource="{Binding Samples}">
-      <ListView.ItemContainerStyle>
-        <Style TargetType="{x:Type ListViewItem}">
-          <EventSetter Event="MouseDoubleClick" Handler="List_DoubleClick" />
-          <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-          <Setter Property="VerticalContentAlignment" Value="Stretch" />
-        </Style>
-      </ListView.ItemContainerStyle>
-      <ListView.View>
-        <GridView>
-          <GridViewColumn Width="200" Header="名前">
-            <GridViewColumn.CellTemplate>
-              <DataTemplate>
-                <local:ListEditBlock Text="{Binding Name}" ValidationRule="{StaticResource FileNameValidationRule}" />
-              </DataTemplate>
-            </GridViewColumn.CellTemplate>
-          </GridViewColumn>
-          <GridViewColumn DisplayMemberBinding="{Binding Date, StringFormat=yyyy/MM/dd hh:mm}" Header="作成日時" />
-          <GridViewColumn Header="サイズ">
-            <GridViewColumn.CellTemplate>
-              <DataTemplate>
-                <TextBlock Text="{Binding Size}" TextAlignment="Right" />
-              </DataTemplate>
-            </GridViewColumn.CellTemplate>
-          </GridViewColumn>
-          <GridViewColumn Header="＊">
-            <GridViewColumn.CellTemplate>
-              <DataTemplate>
-                <local:EditBlock Text="{Binding Star}" ValidationRule="{StaticResource AsteriskValidationRule}" />
-              </DataTemplate>
-            </GridViewColumn.CellTemplate>
-          </GridViewColumn>
-          <GridViewColumn Width="150" Header="コメント">
-            <GridViewColumn.CellTemplate>
-              <DataTemplate>
-                <local:ListEditBlock Text="{Binding Comment}" />
-              </DataTemplate>
-            </GridViewColumn.CellTemplate>
-          </GridViewColumn>
-        </GridView>
-      </ListView.View>
-    </ListView>
+    <Grid Grid.Row="2">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition />
+        <ColumnDefinition />
+      </Grid.ColumnDefinitions>
+
+      <ListView
+        Grid.Column="1"
+        Margin="10"
+        ItemsSource="{Binding Samples}"
+        VirtualizingStackPanel.VirtualizationMode="Recycling">
+        <ListView.ItemContainerStyle>
+          <Style TargetType="{x:Type ListViewItem}">
+            <EventSetter Event="MouseDoubleClick" Handler="List_DoubleClick" />
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+          </Style>
+        </ListView.ItemContainerStyle>
+        <ListView.View>
+          <GridView>
+            <GridViewColumn Width="200" Header="名前">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <local:ListEditBlock Text="{Binding Name}" ValidationRule="{StaticResource FileNameValidationRule}" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+            <GridViewColumn DisplayMemberBinding="{Binding Date, StringFormat=yyyy/MM/dd hh:mm}" Header="作成日時" />
+            <GridViewColumn Header="サイズ">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <TextBlock Text="{Binding Size}" TextAlignment="Right" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+            <GridViewColumn Header="＊">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <local:EditBlock Text="{Binding Star}" ValidationRule="{StaticResource AsteriskValidationRule}" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+            <GridViewColumn Width="150" Header="コメント">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <local:ListEditBlock Text="{Binding Comment}" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+          </GridView>
+        </ListView.View>
+      </ListView>
+      <ListView Margin="10" ItemsSource="{Binding Samples}">
+        <ListView.ItemContainerStyle>
+          <Style TargetType="{x:Type ListViewItem}">
+            <EventSetter Event="MouseDoubleClick" Handler="List_DoubleClick" />
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+          </Style>
+        </ListView.ItemContainerStyle>
+        <ListView.View>
+          <GridView>
+            <GridViewColumn Width="200" Header="名前">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <local:ListEditBlock Text="{Binding Name}" ValidationRule="{StaticResource FileNameValidationRule}" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+            <GridViewColumn DisplayMemberBinding="{Binding Date, StringFormat=yyyy/MM/dd hh:mm}" Header="作成日時" />
+            <GridViewColumn Header="サイズ">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <TextBlock Text="{Binding Size}" TextAlignment="Right" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+            <GridViewColumn Header="＊">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <local:EditBlock Text="{Binding Star}" ValidationRule="{StaticResource AsteriskValidationRule}" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+            <GridViewColumn Width="150" Header="コメント">
+              <GridViewColumn.CellTemplate>
+                <DataTemplate>
+                  <local:ListEditBlock Text="{Binding Comment}" />
+                </DataTemplate>
+              </GridViewColumn.CellTemplate>
+            </GridViewColumn>
+          </GridView>
+        </ListView.View>
+      </ListView>
+    </Grid>
   </Grid>
 </Window>
